# studia

./: todolist.txt
dtdszyme/: file.dtd  file.xml
hih/projekt2/: rubixtohtml.xml
hihlab/: HH.xml  HH.xsd  HH0.xml  HH_10.xml  HH_13.xml  HH_15.xml
hihlab3/DlaStudentowXSLT/: HH.xml  HH.xslt  HH0.xml  HH0.xslt  HH2.xml  HH2.xslt
hihprojekty/projekt1/: INF_SobczakMaciej208229_1.xlsx  fridrich.html  kostki.xsd  lbl.html  metody.html  rodzajekostek.html  style.css  wymagania.txt
hihprojekty/projekt2/: .~lock.maciejsobczak.xlsx#  INF_SobczakMaciej208229_2.xlsx  cubes.xslt  cubestohtml.xsl  cubestoxml.xsl  maciejsobczak.xlsx  rubix.xml  rubixtoxml.xml  style.css
pp/: shell.nix
pp/projekt1/: '  CMakeLists.txt  Makefile  a.out  albatross.c  albatross.h  bird.c  bird.h  collisions.c  collisions.h  config.txt  configmanaging.c  fog.c  fog.h  game  game_defs.h  hunters.c  hunters.h  main.c  main.cpp  ranking.c  ranking.txt  settings.txt  shell.nix  stars.c  stars.h  swallow-stars  test  test.c  todolist.txt  windowmanaging.c  windowmanaging.h
pp/projekt1/buildmake/: Makefile  config.txt
pp/projekt1/depedencies/: albatross.c  bird.c  collisions.c  configmanaging.c  configmenaging.c  fog.c  game_defs.h  hunters.c  hunters.h  ranking.c  stars.c  windowmanaging.c  windowmenaging.c  windowmenaging.h
pp/projekt1/dependencies/: albatross.c  bird.c  configmanaging.c  fog.c  hunters.c  ranking.c  stars.c  windowmanaging.c
pp/projekt1/headers/: albatross.h  bird.h  collisions.h  configmanaging.h  fog.h  game_defs.h  hunters.h  ranking.h  stars.h  windowmanaging.h
(+245 files in other folders)
